tests/parsing/smtlib/v2.6/errors/086_define-sort_bad_name_1.expected
File "tests/parsing/smtlib/v2.6/errors/086_define-sort_bad_name_1.smt2", line 2, character 13-14:
2 | (define-sort _)
                 ^
Error while parsing a sort definition, read the reserved word '_',
      but expected a symbol for the defined sort's name.
